--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="mysql://root:senha(se-houver)@localhost:3306/seu-banco"
-JWT_SECRET = "palmeiras"
+DATABASE_URL="mysql://root:palmeiras@localhost:3306/api-db"
+# JWT_SECRET = "palmeiras"
 PORT = 3000
