--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
-DATABASE_URL="mysql://root@localhost:3306/api-db"
-JWT_SECRET = "palmeiras"
-PORT = 3000
+DATABASE_URL="mysql://root:admin@localhost:3306/db-pi"
+JWT_SECRET="secret"
+PORT=3000
+
+
+#configuração e-mail(disparo de emails para rotas de recuperação de senha)
+MAIL_USER="professores.cadastro@gmail.com" #senha da conta= Fatec2025@
+MAIL_PASS="tijpctynqjbuaipi
+"
