feat: buscar unidades da fatec

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+DATABASE_URL="mysql://root:palmeiras@localhost:3306/api-db"
+JWT_SECRET="chave hiper secreta"
+PORT=3000
 
-.
 
+#configuração e-mail(disparo de emails para rotas de recuperação de senha)
+MAIL_USER="professores.cadastro@gmail.com" 
+MAIL_PASS="yyowschpqfupfnkh"
