--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://root:palmeiras@localhost:3306/api-db"
+DATABASE_URL="mysql://root@localhost:3306/api-db"
 JWT_SECRET="chave hiper secreta"
 PORT=3000
 
