--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,17 @@
-name: Build e Deploy Docker da API
+name: Automação de Versão e Deploy Docker da API
 
 on:
   push:
     branches:
       - master
 
+permissions:
+  contents: write
+
 jobs:
-  build_and_push:
+  version_and_deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
@@ -17,13 +21,10 @@ jobs:
         with:
           node-version: 18
 
-      - name: Cache do npm
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+      - name: Configurar Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
       - name: Instalar dependências
         run: npm ci
@@ -31,46 +32,38 @@ jobs:
       - name: Incrementar versão no package.json
         run: npm version patch --no-git-tag-version
 
-      - name: Configurar identidade do Git
-        run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
-
-      - name: Configurar remote com token
-        run: |
-          git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}
-
-      - name: Commitar atualização de versão
+      - name: Commitar alterações no package.json
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           if [ -n "$(git status --porcelain)" ]; then
-            VERSION=$(node -p "require('./package.json').version")
             git add package.json
-            git commit -m "chore: release da versão $VERSION"
+            git commit -m "chore: release da versão $(node -p "require('./package.json').version")"
             git push
           else
             echo "Nenhuma alteração de versão para commitar."
           fi
 
-      - name: Login no Docker Hub
+      - name: Push das alterações e tags
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git push --follow-tags
+
+      - name: Efetuar login no Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extraindo versão do package.json
-        id: version
-        run: echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
+      - name: Criar imagem docker
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          docker build -t projetointegradorfatec/projeto-cadastro-app-api:latest .
+          docker tag projetointegradorfatec/projeto-cadastro-app-api:latest projetointegradorfatec/projeto-cadastro-app-api:$VERSION
 
-      - name: Build e push da imagem Docker
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            projetointegradorfatec/projeto-cadastro-app-api:latest
-            projetointegradorfatec/projeto-cadastro-app-api:${{ env.VERSION }}
-
-      - name: Limpar cache do Docker
-        run: docker system prune -af || true
+      - name: Efetuar push da imagem
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          docker push projetointegradorfatec/projeto-cadastro-app-api:$VERSION
+          docker push projetointegradorfatec/projeto-cadastro-app-api:latest
