feat(tests): add performance testing suite and VPS performance tests
- Updated package.json to include new test scripts for performance and VPS testing.
- Created performance-report.test.ts to measure server response times and generate performance reports.
- Added performance.test.ts for various response time tests and database performance checks.
- Implemented vps-performance.test.ts for testing the performance of the VPS environment, including connectivity, authentication, and load tests.
- Enhanced memory usage tests to ensure no leaks occur during multiple requests.
- Minor formatting changes in client.ts for consistency.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start:prod": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:performance": "jest performance-report.test.ts",
+    "test:vps": "./test-vps.sh",
+    "test:vps-direct": "jest vps-performance.test.ts"
   },
   "keywords": [],
   "author": "",
@@ -37,9 +40,12 @@
     "@types/multer": "^1.4.13",
     "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
+    "axios": "^1.13.2",
     "jest": "^30.2.0",
     "jest-environment-node": "^30.2.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
